src/core/fileio/json_import_gram.output
Terminals unused in grammar

   UNKNOWN_TOKEN


Grammar

    0 $accept: json_file $end

    1 json_file: /* empty */
    2          | object

    3 content: object
    4        | array
    5        | string
    6        | boolean
    7        | number
    8        | null

    9 object: OBJECT_OPEN object_content OBJECT_CLOSE

   10 object_content: /* empty */
   11               | nonempty_object_content

   12 nonempty_object_content: binding content
   13                        | nonempty_object_content SEPARATOR binding content

   14 binding: STRING ASSIGNMENT

   15 array: ARRAY_OPEN array_content ARRAY_CLOSE

   16 array_content: /* empty */
   17              | nonempty_array_content

   18 nonempty_array_content: array_entry
   19                       | nonempty_array_content SEPARATOR array_entry

   20 array_entry: content

   21 boolean: BOOL

   22 number: float
   23       | integer

   24 float: FLOAT

   25 integer: INT

   26 string: STRING

   27 null: JNULL


Terminals, with rules where they appear

$end (0) 0
error (256)
OBJECT_OPEN (258) 9
OBJECT_CLOSE (259) 9
ARRAY_OPEN (260) 15
ARRAY_CLOSE (261) 15
SEPARATOR (262) 13 19
ASSIGNMENT (263) 14
UNKNOWN_TOKEN (264)
JNULL (265) 27
STRING (266) 14 26
INT (267) 25
FLOAT (268) 24
BOOL (269) 21


Nonterminals, with rules where they appear

$accept (15)
    on left: 0
json_file (16)
    on left: 1 2, on right: 0
content (17)
    on left: 3 4 5 6 7 8, on right: 12 13 20
object (18)
    on left: 9, on right: 2 3
object_content (19)
    on left: 10 11, on right: 9
nonempty_object_content (20)
    on left: 12 13, on right: 11 13
binding (21)
    on left: 14, on right: 12 13
array (22)
    on left: 15, on right: 4
array_content (23)
    on left: 16 17, on right: 15
nonempty_array_content (24)
    on left: 18 19, on right: 17 19
array_entry (25)
    on left: 20, on right: 18 19
boolean (26)
    on left: 21, on right: 6
number (27)
    on left: 22 23, on right: 7
float (28)
    on left: 24, on right: 22
integer (29)
    on left: 25, on right: 23
string (30)
    on left: 26, on right: 5
null (31)
    on left: 27, on right: 8


State 0

    0 $accept: . json_file $end

    OBJECT_OPEN  shift, and go to state 1

    $default  reduce using rule 1 (json_file)

    json_file  go to state 2
    object     go to state 3


State 1

    9 object: OBJECT_OPEN . object_content OBJECT_CLOSE

    STRING  shift, and go to state 4

    $default  reduce using rule 10 (object_content)

    object_content           go to state 5
    nonempty_object_content  go to state 6
    binding                  go to state 7


State 2

    0 $accept: json_file . $end

    $end  shift, and go to state 8


State 3

    2 json_file: object .

    $default  reduce using rule 2 (json_file)


State 4

   14 binding: STRING . ASSIGNMENT

    ASSIGNMENT  shift, and go to state 9


State 5

    9 object: OBJECT_OPEN object_content . OBJECT_CLOSE

    OBJECT_CLOSE  shift, and go to state 10


State 6

   11 object_content: nonempty_object_content .
   13 nonempty_object_content: nonempty_object_content . SEPARATOR binding content

    SEPARATOR  shift, and go to state 11

    $default  reduce using rule 11 (object_content)


State 7

   12 nonempty_object_content: binding . content

    OBJECT_OPEN  shift, and go to state 1
    ARRAY_OPEN   shift, and go to state 12
    JNULL        shift, and go to state 13
    STRING       shift, and go to state 14
    INT          shift, and go to state 15
    FLOAT        shift, and go to state 16
    BOOL         shift, and go to state 17

    content  go to state 18
    object   go to state 19
    array    go to state 20
    boolean  go to state 21
    number   go to state 22
    float    go to state 23
    integer  go to state 24
    string   go to state 25
    null     go to state 26


State 8

    0 $accept: json_file $end .

    $default  accept


State 9

   14 binding: STRING ASSIGNMENT .

    $default  reduce using rule 14 (binding)


State 10

    9 object: OBJECT_OPEN object_content OBJECT_CLOSE .

    $default  reduce using rule 9 (object)


State 11

   13 nonempty_object_content: nonempty_object_content SEPARATOR . binding content

    STRING  shift, and go to state 4

    binding  go to state 27


State 12

   15 array: ARRAY_OPEN . array_content ARRAY_CLOSE

    OBJECT_OPEN  shift, and go to state 1
    ARRAY_OPEN   shift, and go to state 12
    JNULL        shift, and go to state 13
    STRING       shift, and go to state 14
    INT          shift, and go to state 15
    FLOAT        shift, and go to state 16
    BOOL         shift, and go to state 17

    $default  reduce using rule 16 (array_content)

    content                 go to state 28
    object                  go to state 19
    array                   go to state 20
    array_content           go to state 29
    nonempty_array_content  go to state 30
    array_entry             go to state 31
    boolean                 go to state 21
    number                  go to state 22
    float                   go to state 23
    integer                 go to state 24
    string                  go to state 25
    null                    go to state 26


State 13

   27 null: JNULL .

    $default  reduce using rule 27 (null)


State 14

   26 string: STRING .

    $default  reduce using rule 26 (string)


State 15

   25 integer: INT .

    $default  reduce using rule 25 (integer)


State 16

   24 float: FLOAT .

    $default  reduce using rule 24 (float)


State 17

   21 boolean: BOOL .

    $default  reduce using rule 21 (boolean)


State 18

   12 nonempty_object_content: binding content .

    $default  reduce using rule 12 (nonempty_object_content)


State 19

    3 content: object .

    $default  reduce using rule 3 (content)


State 20

    4 content: array .

    $default  reduce using rule 4 (content)


State 21

    6 content: boolean .

    $default  reduce using rule 6 (content)


State 22

    7 content: number .

    $default  reduce using rule 7 (content)


State 23

   22 number: float .

    $default  reduce using rule 22 (number)


State 24

   23 number: integer .

    $default  reduce using rule 23 (number)


State 25

    5 content: string .

    $default  reduce using rule 5 (content)


State 26

    8 content: null .

    $default  reduce using rule 8 (content)


State 27

   13 nonempty_object_content: nonempty_object_content SEPARATOR binding . content

    OBJECT_OPEN  shift, and go to state 1
    ARRAY_OPEN   shift, and go to state 12
    JNULL        shift, and go to state 13
    STRING       shift, and go to state 14
    INT          shift, and go to state 15
    FLOAT        shift, and go to state 16
    BOOL         shift, and go to state 17

    content  go to state 32
    object   go to state 19
    array    go to state 20
    boolean  go to state 21
    number   go to state 22
    float    go to state 23
    integer  go to state 24
    string   go to state 25
    null     go to state 26


State 28

   20 array_entry: content .

    $default  reduce using rule 20 (array_entry)


State 29

   15 array: ARRAY_OPEN array_content . ARRAY_CLOSE

    ARRAY_CLOSE  shift, and go to state 33


State 30

   17 array_content: nonempty_array_content .
   19 nonempty_array_content: nonempty_array_content . SEPARATOR array_entry

    SEPARATOR  shift, and go to state 34

    $default  reduce using rule 17 (array_content)


State 31

   18 nonempty_array_content: array_entry .

    $default  reduce using rule 18 (nonempty_array_content)


State 32

   13 nonempty_object_content: nonempty_object_content SEPARATOR binding content .

    $default  reduce using rule 13 (nonempty_object_content)


State 33

   15 array: ARRAY_OPEN array_content ARRAY_CLOSE .

    $default  reduce using rule 15 (array)


State 34

   19 nonempty_array_content: nonempty_array_content SEPARATOR . array_entry

    OBJECT_OPEN  shift, and go to state 1
    ARRAY_OPEN   shift, and go to state 12
    JNULL        shift, and go to state 13
    STRING       shift, and go to state 14
    INT          shift, and go to state 15
    FLOAT        shift, and go to state 16
    BOOL         shift, and go to state 17

    content      go to state 28
    object       go to state 19
    array        go to state 20
    array_entry  go to state 35
    boolean      go to state 21
    number       go to state 22
    float        go to state 23
    integer      go to state 24
    string       go to state 25
    null         go to state 26


State 35

   19 nonempty_array_content: nonempty_array_content SEPARATOR array_entry .

    $default  reduce using rule 19 (nonempty_array_content)
